# alicetrd-python

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  testparse.py  uctmon.py
src/dcs/: __init__.py  minidaq.py  trdbox.py
src/rawdata/: __init__.py  constants.py  evdump.py  header.py  linkparser.py  logging.py  o32reader.py  rec.py  zmqreader.py
src/trdmon/: __init__.py  basesvc.py  cli.py  dim.py  dimwid.py  roc.py  trdbox.py
