[metadata]
name = pydcs-tdietel
version = 0.0.1
author = Thomas Dietel
author_email = tom@dietel.net
description = Minimal DCS for the ALICE TRD in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdietel/pydcs
#project_urls =
#    Bug Tracker = https://github.com/tdietel/pydcs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
