[metadata]
name = pytrd-tdietel
version = 0.0.1
author = Thomas Dietel
author_email = tom@dietel.net
description = Python tools for the ALICE TRD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdietel/alicetrd-python
#project_urls =
#    Bug Tracker = https://github.com/tdietel/pydcs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires=[
       'pydim3',
       'pyzmq',
       'click'
    ]

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.entry_points]
console_scripts =
    trdmon = trdmon:cli
    evdump = rawdata:evdump
    raw2digits = rawdata:rec_digits
    trdbox = dcs:trdbox
    minidaq = dcs:minidaq

[options.packages.find]
where = src
